* removed dbus plugin
* improved status icon plugin: added volume control using mouse wheel
* improved scrobbler plugin: now-playing notification, libre.fm support, offline mode
* improved visualization support
* improved desktop integration
* improved notifier plugin: transparency settings and volume tracking
* improved playlist: added show protocol option
* optimized startup process
* fixed pulse audio plugin bug (24-bit support)
* fixed alsa buffer underrun
* fixed default font
* fixed gnome support
* fixed system language detection
* fixed a lot of noncritical bugs
* updated Ukrainian translation (Gennadi Motsyo)
* updated Russian translation
* updated German translation (Panagiotis Papadopoulos)
* updated Polish translation (Grzegorz Gibas)

Version 0.3.1
* added Home/End hotkeys
* added possibility to hide song numbers
* added cygwin support (yselkowitz AT gmail.com)
* added standard icons support to the status icon plugin
* added openbox compatibility option
* added possibility to load plugins form a different location (Holger Schurig)
* added mkv extension to mplayer plugin
* added volume control using global hotkeys
* fixed problem with "buffering" message
* fixed sorting by name
* fixed cue parsing
* fixed displayed mpeg version
* fixed bug with missing comment in playlist
* fixed non-working global hotkeys with enabled caps-lock
* fixed non-working equalizer when using Ogg Vorbis plugin
* fixed jack regression
* fixed data receiving from UDS
* removed broken LyricWiki.org support, added lyricsplugin.com instead
* added Lithuanian translation (Algirdas Butkus)
* added Kazakh translation (Baurzhan Muftakhidinov)
* updated Chinese Traditional and Chinese Simplified translations (lon)
* updated Russian translation
* updated Turkish translation (Bilgesu Güngör)
* updated German translation (Panagiotis Papadopoulos)
* updated Ukrainian translation (Gennadi Motsyo)
* updated Italian translation (Gian Paolo Renello)
* updated Polish translation (Grzegorz Gibas)