@@ -303,18 +303,27 @@ Version 0.2.3
 * добавлена поддержка cygwin (yselkowitz AT gmail.com)
 * добавлена поддержка стандартных иконок в модуле Status Icon
 * добавлена опция совместимости с openbox
-* добавлена возможность загружать модули из другого пути (Holger Schurig)
+* добавлена возможность загружать модули из другого места (Holger Schurig)
 * добавлено расширение mkv в модуль поддержки mplayer-а
 * добавлена регулировка громкости с помощью глобальных клавиш
+* добавлена прокрутка бегущей строки с помощью мыши (Erik Ölsar)
+* добавлена поддержка Qt 4.6
+* иправлена сборка на некоторых системах (Pino Toskano)
 * исправлена проблема с сообщением буферизации
 * исправлена сортировка по имени
 * исправлено чтение cue
 * исправлена отображаемая версия mpeg
 * исправлена ошибка, связанная с отсутствием комментария в списке
-* исправлены нерабочие глобальные клавишами при включенном capslock-е
+* исправлены нерабочие глобальные клавиши при включенном capslock-е
+* устранена блокировка клавиатуры в модуле глобальных клавиш
 * исправлен нерабочий эквалайзер при использовании модуля Ogg Vorbis
 * исправлен модуль jack
 * исправлено получение информации из UDS
+* исправлено поведение фокуса на кнопках  (Erik Ölsar)
+* исправлена проблема с медленной визуализацией
+* исправлены проблемы с некоторыми звуковыми картами
+* исправлено определение текущей локали
+* исправлена потеря текущего трека
 * сервис LyricWiki.org заменён на lyricsplugin.com
 * добавлен литовский перевод (Algirdas Butkus)
 * добавлен казахский перевод (Baurzhan Muftakhidinov)
